<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/btn_comprar"
        android:layout_width="202dp"
        android:layout_height="53dp"
        android:layout_marginBottom="36dp"
        android:text="@string/comprar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tv_value"
        android:layout_width="309dp"
        android:layout_height="50dp"
        android:gravity="center"
        android:text="@string/valor_a_pagar"
        android:textAlignment="textStart"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/btn_comprar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.93"
        tools:ignore="RtlCompat" />

    <ImageButton
        android:id="@+id/btn_add"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:layout_marginStart="208dp"
        android:layout_marginBottom="64dp"
        android:contentDescription="@string/btn_add"
        app:layout_constraintBottom_toTopOf="@+id/tv_value"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/add"
        app:tint="@color/blue_shirt"
        tools:ignore="MissingConstraints" />

    <ImageButton
        android:id="@+id/btn_remove"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:layout_marginEnd="36dp"
        android:layout_marginBottom="64dp"
        android:contentDescription="@string/btn_remove"
        app:layout_constraintBottom_toTopOf="@+id/tv_value"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/minimize"
        app:tint="@color/blue_shirt"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/tv_count"
        android:layout_width="75dp"
        android:layout_height="44dp"
        android:layout_marginBottom="64dp"
        android:gravity="center"
        android:text="@string/value_default"
        android:textAlignment="center"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/tv_value"
        app:layout_constraintEnd_toStartOf="@+id/btn_remove"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/btn_add" />

    <Button
        android:id="@+id/btn_uniforme_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginBottom="32dp"
        android:text="@string/amarela"
        app:layout_constraintBottom_toTopOf="@+id/btn_add"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btn_uniforme_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="48dp"
        android:layout_marginBottom="32dp"
        android:text="@string/azul"
        app:layout_constraintBottom_toTopOf="@+id/btn_remove"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.97"
        app:layout_constraintStart_toEndOf="@+id/btn_uniforme_1" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="409dp"
        android:layout_height="360dp"
        android:foregroundGravity="center"
        app:layout_constraintBottom_toTopOf="@+id/btn_uniforme_1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.fragment.app.FragmentContainerView
            android:id="@+id/fragmentContainerView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:foregroundGravity="center"
            tools:layout_editor_absoluteX="205dp"
            tools:layout_editor_absoluteY="167dp"
            tools:ignore="MissingConstraints" />
    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>