<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".App">

    <ImageView
        android:id="@+id/iv_logo_copa"
        android:layout_width="155dp"
        android:layout_height="201dp"
        android:layout_marginBottom="36dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_logo_cbf"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/logo_fifa_qatar"
        android:contentDescription="@string/logo_copa_qatar_2022"/>

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="379dp"
        android:layout_height="56dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="52dp"
        android:layout_marginEnd="12dp"
        android:text="@string/uniformes_copa_2022"
        android:textAlignment="center"
        android:textColor="@color/blue_shirt"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/iv_logo_cbf"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_title"
        app:layout_constraintVertical_bias="0.097"
        app:srcCompat="@drawable/cbf_logo"
        android:contentDescription="@string/logo_cbf"/>
</androidx.constraintlayout.widget.ConstraintLayout>